
EVERYWHERE foo_elim => foo_inv

(* ---------------------------------------------------------------------- *)

AND SIMILAR
	lexico2_app_1 => lexico2_1 

Definition irrefl_neq := irrefl_inv_neq.
Definition sym_to_eq := sym_inv_eq.

Definition trans_strict := trans_strict_of_antisym.



Definition inverse_image := preimage.
Definition sequence := rel_seq.

Definition flip := inverse.


Definition large_strict_trans := large_trans_l.
Definition strict_large_trans := large_trans_r.


Definition eq_by_inverse_l := inverse_eq_l.
Definition eq_by_inverse_r := inverse_eq_r.

Definition eq_equiv := equiv_eq


Definition tclosure_rtclosure := rtclosure_of_tclosure.
Definition tclosure_right := tclosure_inv_r.

Definition functional_empty := functional_rel_empty.

Definition union_refl_left := refl_rel_union_l.

Definition prove_rel_union_left := rel_union_l.

Lemma inverse_inverse_applied : forall R x y,
  (inverse (inverse R)) x y = R x y.
Proof using. auto. Qed.

Definition functional_characterization := functional_iff_seq_inverse_incl_eq.

Definition double_incl := antisym_rel_incl.

Hint Resolve rel_le_tclosure_self.
Hint Resolve stclosure_step stclosure_sym stclosure_trans.

Definition defined_rel_incl_functional := eq_of_incl_defined_functional.

Definition incl_fr := incl_fun_rel.
Definition incl_rf := incl_rel_fun.

Definition binds_func := binds_functional.

Definition Nth_func := Nth_functional.

EVERYWHERE: func => fun.

Definition .. := rel_in_fun_of_fun_in_rel_functional

Definition prop_ext_1 := pred_ext_1.
Definition prop_ext_2 := pred_ext_2.
etc..

Hint Resolve equiv_eq. (* TODO: remove


EVERYWHERE: from -> of

EVERYWHERE: once -> one

Definition nat_of_number := number_to_nat.

EVERYWHERE: iff -> eq

Definition prove_Inhab := Inhab_of_val.


Ltac prove_wf := solve_wf.

EVERYWHERE left => l
EVERYWHERE right => r

EVERYWHERE: pred_le => pred_incl

Definition not_inj := injective_not.

Definition proj_lemma := forall_conj_inv_1.